[gd_scene load_steps=19 format=3 uid="uid://sv5xy1jju35s"]

[ext_resource type="Script" path="res://scripts/savespot.gd" id="1_1fcal"]
[ext_resource type="Texture2D" uid="uid://d3gp7abdu2ytc" path="res://gm assets/ang.png" id="2_233mf"]
[ext_resource type="Shader" path="res://adventur of timtim/player.gdshader" id="2_e210f"]
[ext_resource type="Texture2D" uid="uid://dpdut1tj68l1d" path="res://gm assets/SAVED.png" id="4_4h1t3"]
[ext_resource type="Shader" path="res://adventur of timtim/glow.gdshader" id="4_h6ogg"]
[ext_resource type="AudioStream" uid="uid://cq48gt5t7tgbu" path="res://sound/angelic-choir-6793.wav" id="6_vjof6"]
[ext_resource type="AudioStream" uid="uid://driyoclxdc4dg" path="res://sound/beautiful-choir-170206.wav" id="7_ff7dj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7oat"]
size = Vector2(12.8826, 55.8051)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c123i"]
shader = ExtResource("2_e210f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7c8v6"]
shader = ExtResource("4_h6ogg")
shader_parameter/color1 = null
shader_parameter/color2 = null
shader_parameter/threshold = null
shader_parameter/intensity = null
shader_parameter/opacity = null
shader_parameter/glow_color = null

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7f4nv"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(19.63, 1, 1)
inherit_velocity_ratio = 0.871
direction = Vector3(0, -1, 0)
spread = 33.387
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
color = Color(2, 2, 2, 1)

[sub_resource type="Environment" id="Environment_n587n"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 15.65
glow_levels/2 = 16.0
glow_levels/3 = 16.0
glow_levels/4 = 16.0
glow_levels/5 = 16.0
glow_levels/6 = 16.0
glow_levels/7 = 16.0
glow_bloom = 0.04
glow_blend_mode = 1

[sub_resource type="Gradient" id="Gradient_efkg7"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p2c0w"]
gradient = SubResource("Gradient_efkg7")
fill = 1
fill_from = Vector2(0.518293, 1)
fill_to = Vector2(0.47561, 0.47561)

[sub_resource type="Animation" id="Animation_3u1iu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(27.4443, -4.96136)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0522028, 0.484549)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.843137)]
}

[sub_resource type="Animation" id="Animation_e6xuj"]
resource_name = "saved"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 7.46427),
"update": 0,
"values": [Vector2(-2.00813, -7.79642), Vector2(-2.00813, -7.79642), Vector2(-2.38419e-07, -7.08766), Vector2(2.6775, -7.79642), Vector2(2.6775, -7.79642), Vector2(3.34687, -9.21395)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.0194914, 0.24821), Vector2(0.0405709, 0.305965), Vector2(0.105248, 0.420458), Vector2(0.287616, 0.59908), Vector2(0.30749, 0.635987), Vector2(0.362965, 0.657801), Vector2(0.362965, 0.657801)]
}

[sub_resource type="Animation" id="Animation_8fmkt"]
resource_name = "saved lost"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.6, 0.7, 0.9, 1, 1.1, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3.34687, -9.92272), Vector2(3.34687, -10.6315), Vector2(3.34687, -14.8841), Vector2(3.34687, -14.0572), Vector2(3.34687, -13.9391), Vector2(3.34687, -13.8209), Vector2(3.34687, -13.7323), Vector2(3.34687, -13.4665), Vector2(3.34687, -12.049), Vector2(3.34687, -10.6315), Vector2(3.34687, -5.67013), Vector2(3.34687, -1.41753), Vector2(3.34687, 3.54383)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.362965, 0.657801)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.1, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.843137), Color(1, 1, 1, 0.67451), Color(1, 1, 1, 0.470588), Color(1, 1, 1, 0.301961), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xispe"]
_data = {
"RESET": SubResource("Animation_3u1iu"),
"saved": SubResource("Animation_e6xuj"),
"saved lost": SubResource("Animation_8fmkt")
}

[node name="savespot" type="StaticBody2D"]
scale = Vector2(1.49393, 1.4109)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_1fcal")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(4, 0)
scale = Vector2(2.52, 1)
collision_layer = 65536
collision_mask = 65536

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.45775, 4.11677)
shape = SubResource("RectangleShape2D_i7oat")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.392157, 0.392157, 0.392157, 1)
material = SubResource("ShaderMaterial_c123i")
position = Vector2(0, 4.57419)
scale = Vector2(0.296051, 0.314455)
texture = ExtResource("2_233mf")
region_enabled = true
region_rect = Rect2(0, 0, 118, 177)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_7c8v6")
position = Vector2(-1.33875, 31.1857)
scale = Vector2(0.45674, 0.538181)
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_7f4nv")
lifetime = 5.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="GPUParticles2D"]
environment = SubResource("Environment_n587n")

[node name="PointLight2D3" type="PointLight2D" parent="."]
position = Vector2(0, 0.708766)
scale = Vector2(0.55644, 1)
energy = 0.8
texture = SubResource("GradientTexture2D_p2c0w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xispe")
}

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.843137)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(27.4443, -4.96136)
scale = Vector2(0.0522028, 0.484549)
texture = ExtResource("4_4h1t3")

[node name="camerainTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="cameraoutTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vjof6")
attenuation = 15.455

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ff7dj")
attenuation = 16.0

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="timeout" from="camerainTimer" to="." method="_on_camerain_timer_timeout"]
[connection signal="timeout" from="cameraoutTimer" to="." method="_on_cameraout_timer_timeout"]
